# gmi

./: .gitignore  CANONICAL.md  Makefile  README.md  SETUP.md  gmi_embedder.py  learning_receipts.jsonl  ledger_algebra.py  pyproject.toml  receipts.jsonl  semantic_receipts.jsonl  thermo_cognition.py
.idx/: dev.nix
adapters/: LEGACY.md  __init__.py  base.py  cbtsv1_adapter.py  npe_adapter.py  npe_integration.py  stochastic_synthesizer.py
core/: LEGACY.md  __init__.py  affective_budget.py  constraints.py  embedder.py  gr_solver.py  hierarchical_budget.py  memory.py  potential.py  relativistic_dynamics.py  section_i_theorems.py  section_ii_theorems.py  section_iii_theorems.py  section_iv_theorems.py  state.py  stratified_operators.py  stratified_state.py  stratified_theorems.py
docs/: architecture.md  architecture_spec.md  canon_spec_index.md  character_shell_spec.md  coh_gmos_gmi_doctrine.md  cohil_evaluator_spec.md  definition_ledger.md  epistemic_shell_spec.md  experiment_design.md  git-workflow.md  gmi_canon_spec.md  gmos_canon_spec.md  hosted_agent_contract.md  npe_integration_design.md  persistence_stack_roles.md  phase1_status_matrix.md  phase2_eval_protocol.md  phase2_status_matrix.md  phase2_task_spec.md  phase3_eval_protocol.md  phase3_status_matrix.md  phase3_task_b_spec.md  phase4_calibration_protocol.md  phase4_eval_protocol.md  phase4_objective.md  phase4_policy_gating_spec.md  phase4_status_matrix.md  phase4_task_c_spec.md  quantum_coh_bridge_spec.md  repo-testing.md  repo_status_matrix.md  section_i_continuous_core.md  section_ii_discrete_governance.md  section_iii_domain_instantiations.md  section_iv_verification_contract.md  substrate_contract.md  verifier_rules.md  world_weld_spec.md
experiments/: LEGACY.md  benchmark_suite.py  gmi_comparison.py  gmi_embedder.py  intellectual_tests.py  ledger_algebra.py  maze_experiment.py  stress_tests.py  thermo_cognition.py
gmos/: .gitignore  README.md  pyproject.toml
gmos/benchmarks/: __init__.py
gmos/benchmarks/phase2/: __init__.py  ablation.py  ablation_results.json  baselines.py  failure_analysis.json  failure_analysis.py  repeated_trials.py  repeated_trials_results.json  results.json  run_eval.py  task_dataset.py
gmos/benchmarks/phase3/: repeated_seeds.py  repeated_seeds_results.json  results.json  run_eval.py  safehold_sweep.py  test_components.py
gmos/benchmarks/phase3/task_b/: dataset.py
gmos/benchmarks/phase4/: integrated_eval.py  integrated_results.json  run_eval.py  simple_eval.py  test_gating.py  test_gating_eval.py
gmos/benchmarks/phase4/task_c/: dataset.py
gmos/gmos/benchmarks/phase4/: evaluation_results.json
gmos/src/gmos/: __init__.py
gmos/src/gmos/action/: STUBS.md  commitment.py  external_io.py  replenishment.py
gmos/src/gmos/agents/: __init__.py  ns_agent.py  physics_agent.py  planner_agent.py  symbolic_agent.py
gmos/src/gmos/agents/gmi/: __init__.py  adaptation.py  affective_budget.py  affective_state.py  calibration.py  character_shell.py  ear_operator.py  evolution_loop.py  execution_loop.py  full_dynamics.py  gating.py  gating_config.py  gating_context.py  gmi_agent.py  hosted_agent.py  memory_adapter.py  persistence_integration.py  policy_selection.py  quantum_coh.py  resonant_field.py  semantic_loop.py  state.py  tension_law.py  threat_modulation.py  triad_resonance.py  twelve_block_state.py  viscosity_law.py  voice_operator.py
gmos/src/gmos/agents/gmi/environments/: __init__.py  base.py  key_door.py  maze.py
gmos/src/gmos/agents/gmi/planning/: __init__.py  goal_representation.py  greedy_planner.py
gmos/src/gmos/agents/gmi/vision/: __init__.py  scene_binding.py  visual_dynamics.py  visual_field.py  visual_projections.py
gmos/src/gmos/contracts/: __init__.py  hosted_agent.py  receipts.py  substrate.py  types.py
gmos/src/gmos/experimental/: __init__.py
gmos/src/gmos/experimental/agents/: __init__.py  ns_agent.py  physics_agent.py  planner_agent.py  symbolic_agent.py
gmos/src/gmos/kernel/: __init__.py  budget_router.py  checkpoint.py  cohil_evaluator.py  continuous_dynamics.py  danger.py  gmi_receipts.py  hash_chain.py  identity_kernel.py  integrity_scorer.py  macro_verifier.py  mediator.py  operating_cost.py  process_table.py  receipt.py  receipt_engine.py  reconfiguration.py  reject_codes.py  repair_controller.py  repair_verifier.py  scheduler.py  state_host.py  substrate_state.py  theorems.py  thermodynamic_cost.py  unified_persistence.py  verifier.py
gmos/src/gmos/memory/: __init__.py  archive.py  comparator.py  consolidation.py  enhanced_retrieval.py  memory_connector.py  operators.py  relevance.py  replay.py  workspace.py
gmos/src/gmos/runtime/: minimal_loop.py  mode_machine.py
gmos/src/gmos/sensory/: __init__.py  anchors.py  conflict.py  cost_law.py  curvature.py  fusion.py  manifold.py  operators.py  projection.py  receipts.py  salience.py  sensory_connector.py  tension_bounds.py  trauma.py  verifier.py
gmos/src/gmos/symbolic/: __init__.py  binding.py  glyph_embedder.py  glyph_space.py  semantic_manifold.py  symbolic_connector.py
gmos/tests/: test_doc_correspondence.py  test_imports.py
gmos/tests/agents/gmi/: __init__.py  benchmark_suite.py  test_gmi.py  test_hearing.py  test_perception_verification.py  test_vision.py
gmos/tests/kernel/: test_budget_reserves.py  test_kernel.py  test_receipts.py
gmos/tests/runtime/: __init__.py  test_minimal_loop.py
gmos/tests/sensory/: test_dual_use_pipeline.py  test_maze_trauma.py  test_world_weld.py
ledger/: LEGACY.md  __init__.py  hash_chain.py  oplax_verifier.py  receipt.py  replay.py  slab_verifier.py
memory/: LEGACY.md  __init__.py  archive.py  budget_costs.py  comparator.py  episode.py  memory_receipts.py  query_engine.py  reality_anchors.py
plans/: agent_loops_completion_plan.md  character_shell_integration_plan.md  ci_cd_setup_plan.md  cli_benchmark_runner_plan.md  dual_package_fix_plan.md  dual_use_sensory_substrate_plan.md  epistemic_shell_integration_plan.md  extensive_code_doc_improvement_plan.md  gmi_architecture_enhancement_plan.md  gmi_benchmark_plan.md  gmi_coh_master_build_plan.md  (+22 more)
(+29 files in other folders)
