[project]
name = "gmi"
version = "0.1.0"
description = "Governed Metabolic Intelligence prototype"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "GMI Contributors"}
]
keywords = ["machine-learning", "cognitive-computing", "thermodynamics", "evolutionary-algorithms"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Legacy packages - see CANONICAL.md
# Canonical implementation is in gmos/src/gmos/
packages = ["core", "memory", "ledger", "runtime", "adapters"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = []

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
# Exclude gmos from root test discovery - it has its own pyproject.toml and tests
# To test gmos: cd gmos && pip install -e . && pytest -q
norecursedirs = ["gmos", "experiments", "adapters"]

[tool.coverage.run]
source = ["core", "ledger", "runtime", "memory"]
omit = ["*/tests/*", "*/experiments/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
