[project]
name = "gmos"
version = "0.1.0"
description = "Glyph-Manifold Operating System - Governed substrate for reflective, ledger-bound intelligence"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "GM-OS Contributors"}
]
keywords = ["cognitive-computing", "governance", "manifold", "ledger", "thermodynamics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["gmos", "gmos.kernel", "gmos.memory", "gmos.sensory", "gmos.symbolic", "gmos.agents", "gmos.action"]

[tool.setuptools.package-data]
gmos = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = []

[tool.black]
line-length = 88
target-version = ["py311"]
